Cleanup, not showing "Id" property on objects, value factory fixes

--- a/Swashbuckle.Core/SwaggerUi/CustomAssets/screen.css
+++ b/Swashbuckle.Core/SwaggerUi/CustomAssets/screen.css
@@ -1245,7 +1245,7 @@
   width: 200px;
 }
 .swagger-section #header form#api_selector .input input#input_baseUrl {
-  width: 400px;
+  width: 300px;
 }
 .swagger-section #header form#api_selector .input a#explore {
   display: block;
@@ -1263,6 +1263,24 @@
   border-radius: 4px;
 }
 .swagger-section #header form#api_selector .input a#explore:hover {
+  background-color: #547f00;
+}
+.swagger-section #header form#api_selector .input a#back {
+  display: block;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 6px 8px;
+  font-size: 0.9em;
+  color: white;
+  background-color: #547f00;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -o-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -khtml-border-radius: 4px;
+  border-radius: 4px;
+}
+.swagger-section #header form#api_selector .input a#back:hover {
   background-color: #547f00;
 }
 .swagger-section #header form#api_selector .input input {
